[package]
name = "bes"
version = "0.1.0"
authors = ["Nate Catelli <ncatelli@packetfire.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies]
wasm-bindgen = "0.2"
mainspring = { git = "https://github.com/ncatelli/mainspring", branch = "main" }
spasm = { git = "https://github.com/ncatelli/spasm", branch = "main" }
scrap = { git = "https://github.com/ncatelli/scrap", tag = "v1.0.0" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
